--- a/extension dial/index.html
+++ b/extension dial/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div onclick="opentabs()" id="all" onclick="location.href='ent.univ-rennes1.fr/';">OPEN ALL</div>
+    <div onclick="opentabs()" id="all" onclick="location.href='ent.univ-rennes1.fr/';">OPEN ALLa</div>
     <div id="tabs">
       <div class="tab" style="background-color:#3b5998" onclick="location.href='https://www.facebook.com';"><img src="facebook-256.png"></div>
       <div class="tab" style="background-color:#cd201f" onclick="location.href='https://www.youtube.com/feed/subscriptions';"><img src="youtube-6-256.png"></div>
