--- a/extension dial/index.html
+++ b/extension dial/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div onclick="opentabs()" id="all" onclick="location.href='https://ent.univ-rennes1.fr/';">OPEN ALL</div>
+    <div onclick="opentabs()" id="all">OPEN ALL</div>
     <div id="tabs">
       <div class="tab" style="background-color:#3b5998" onclick="location.href='https://www.facebook.com';"><img src="facebook-256.png"></div>
       <div class="tab" style="background-color:#cd201f" onclick="location.href='https://www.youtube.com/feed/subscriptions';"><img src="youtube-6-256.png"></div>
@@ -28,6 +28,9 @@
       window.open('https://www.dealabs.com');
       window.open("https://twitter.com");
       window.open('https://gmail.com');
+      window.open('https://gmail.com');
+      window.open('https://ent.univ-rennes1.fr/');
+      window.close();
     }
 
 
