--- a/attestation/index.html
+++ b/attestation/index.html
@@ -80,7 +80,7 @@
           pdf.text(date, 32, 229);
           pdf.text(heure.replace('h', ':'), 92, 229);
           pdf.text(adresse, 47, 63);
-          pdf.text(ville, 105, 55);
+          pdf.text('Rennes', 105, 55);
           pdf.text(ville, 37, 221);
           pdf.setFontSize(15);
           pdf.text('X', 27, motifXs[motifs.indexOf(motif)]);
