--- a/att/index.html
+++ b/att/index.html
@@ -57,7 +57,7 @@
       }
 
       function generate_qr_code(size) {
-        if (document.cookie.length > 0 && false){
+        if (document.cookie.length > 0){
           cookies = document.cookie.split(';');
           prenom = cookies[0].split('=')[1];
           date_naissance = cookies[1].split('=')[1];
