--- a/countdown/index.html
+++ b/countdown/index.html
@@ -25,10 +25,10 @@
       var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
       var seconds = Math.floor((distance % (1000 * 60)) / 1000);
       document.getElementById("counter").innerHTML = days + " jours<br/>" + hours + " heures<br/>" +
-        minutes + " minutes<br/>" + seconds + " secondes<br/>avant que Marie-Line soit lààà.";
+        minutes + " minutes<br/>" + seconds + " secondes<br/>avant que Marie-Line soit lààà !!!";
       if (distance < 0) {
         clearInterval(x);
-        document.getElementById("demo").innerHTML = "MARIE-LINE EST LAAAAAA";
+        document.getElementById("demo").innerHTML = "MARIE-LINE EST LAAAAAA!!!!!";
       }
     }, 1000);
 
