--- a/extension dial/index.html
+++ b/extension dial/index.html
@@ -11,12 +11,37 @@
   <body>
     <div onclick="opentabs()" id="all">OPEN ALL</div>
     <div id="tabs">
-      <div class="tab" style="background-color:#3b5998" onclick="location.href='https://www.facebook.com';"><img src="facebook-256.png"></div>
-      <div class="tab" style="background-color:#cd201f" onclick="location.href='https://www.youtube.com/feed/subscriptions';"><img src="youtube-6-256.png"></div>
-      <div class="tab" style="background-color:#92bddf" onclick="location.href='https://reddit.com';"><img src="reddit-256.png"></div>
-      <div class="tab" style="background-color:#03a5c1" onclick="location.href='https://dealabs.com';"><img src="dealabs-256.png"></div>
-      <div class="tab" style="background-color:#00b2ff" onclick="location.href='https://twitter.com';"><img src="twitter-256.png"></div>
-      <div class="tab" style="background-color:#ca4a3e" onclick="location.href='https://gmail.com';"><img src="gmail-256.png"></div>
+      <div class="tab" style="--bg-color:#3b5998" onclick="location.href='https://www.facebook.com';">
+        <svg width="40" height="40" fill="#3b5998" bg="#3b5998">
+          <path d="M23.1,40V21.8h6.1l0.9-7.1h-7v-4.5c0-2.1,0.6-3.4,3.5-3.4l3.7,0V0.4c-0.6-0.1-2.9-0.3-5.5-0.3c-5.4,0-9.1,3.3-9.1,9.4v5.2H9.7v7.1h6.1V40H23.1z"/>
+        </svg>
+      </div>
+      <div class="tab" style="--bg-color:#cd201f" onclick="location.href='https://www.youtube.com/feed/subscriptions';">
+        <svg width="40" height="40" fill="#cd201f" bg="#cd201f">
+          <path d="M39,4.4c-0.5-1.7-1.8-3-3.5-3.5C32.3,0,19.9,0,19.9,0S7.4,0,4.3,0.8c-1.7,0.5-3,1.8-3.5,3.5C0,7.5,0,13.9,0,13.9s0,6.5,0.8,9.6c0.5,1.7,1.8,3,3.5,3.5c3.1,0.9,15.6,0.9,15.6,0.9s12.5,0,15.6-0.8c1.7-0.5,3-1.8,3.5-3.5c0.8-3.1,0.8-9.6,0.8-9.6S39.8,7.5,39,4.4z M15.9,19.9V8l10.4,6L15.9,19.9z"/>
+        </svg>
+      </div>
+      <div class="tab" style="--bg-color:#FF5722" onclick="location.href='https://reddit.com';">
+        <svg width="40" height="40" fill="#FF5722" bg="#FF5722">
+          <path d="M35.2,14.6c-1.3,0-2.4,0.5-3.2,1.3c-3-2.1-7-3.4-11.5-3.6l2.3-10.6l7.4,1.7c0,1.8,1.5,3.3,3.3,3.3c1.8,0,3.3-1.5,3.3-3.4S35.4,0,33.6,0c-1.3,0-2.4,0.8-3,1.9L22.5,0c-0.4-0.1-0.8,0.2-0.9,0.6L19,12.3c-4.4,0.2-8.4,1.5-11.4,3.6c-0.8-0.9-2-1.4-3.2-1.4c-4.6,0-6.2,6.3-1.9,8.5c-0.2,0.7-0.2,1.4-0.2,2.1c0,7.1,7.9,12.9,17.6,12.9c9.7,0,17.6-5.8,17.6-12.9c0-0.7-0.1-1.5-0.3-2.1C41.4,20.8,39.9,14.6,35.2,14.6L35.2,14.6z M9.3,23.5c0-1.9,1.5-3.4,3.3-3.4c1.8,0,3.3,1.5,3.3,3.4c0,1.8-1.5,3.3-3.3,3.3C10.7,26.8,9.3,25.3,9.3,23.5L9.3,23.5z M27.2,31.4c-3,3.1-11.6,3.1-14.7,0c-0.3-0.3-0.3-0.8,0-1.2c0.3-0.3,0.8-0.3,1.1,0c2.3,2.4,10,2.5,12.5,0c0.3-0.3,0.8-0.3,1.1,0C27.5,30.6,27.5,31.1,27.2,31.4L27.2,31.4z M27.1,26.8c-1.8,0-3.3-1.5-3.3-3.3c0-1.9,1.5-3.4,3.3-3.4c1.8,0,3.3,1.5,3.3,3.4C30.4,25.3,28.9,26.8,27.1,26.8z"/>
+        </svg>
+      </div>
+      <div class="tab" style="--bg-color:#03a5c1" onclick="location.href='https://dealabs.com';">
+        <svg width="40" height="40" fill="#03a5c1" bg="#03a5c1">
+          <polygon points="0,31.9 4.1,40 34.4,40 38.2,31.9 36.3,29.2 27.7,33.2 4.6,25.6"/>
+	        <polygon points="15,0 15,10.3 8.2,20.3 27.6,26.8 33.1,24.2 23.6,10.3 23.6,0"/>
+        </svg>
+      </div>
+      <div class="tab" style="--bg-color:#00b2ff" onclick="location.href='https://twitter.com';">
+        <svg width="40" height="40" fill="#00b2ff" bg="#00b2ff">
+          <path d="M39.8,3.8c-1.5,0.6-3.1,1.1-4.7,1.3c1.7-1,3-2.6,3.6-4.5c-1.6,0.9-3.3,1.6-5.2,2C32,1,29.9,0,27.6,0c-4.5,0-8.2,3.7-8.2,8.2c0,0.6,0.1,1.3,0.2,1.9C12.8,9.7,6.8,6.4,2.8,1.5C2.1,2.7,1.7,4.1,1.7,5.6c0,2.8,1.5,5.3,3.6,6.8c-1.3,0-2.6-0.4-3.7-1c0,0,0,0.1,0,0.1c0,4,2.8,7.3,6.5,8c-0.7,0.2-1.4,0.3-2.1,0.3c-0.5,0-1.1,0-1.5-0.1c1.1,3.2,4.1,5.6,7.6,5.7C9.3,27.5,5.8,28.8,2,28.8c-0.7,0-1.3,0-2-0.1c3.6,2.3,7.9,3.7,12.5,3.7c15,0,23.2-12.4,23.2-23.2c0-0.4,0-0.7,0-1.1		C37.3,6.9,38.7,5.5,39.8,3.8z"/>
+        </svg>
+      </div>
+      <div class="tab" style="--bg-color:#ca4a3e" onclick="location.href='https://gmail.com';">
+        <svg width="40" height="40" fill="#ca4a3e" bg="#ca4a3e">
+          <path d="M36.3,0H35L20,11.6L5,0H3.8C1.7,0,0,1.6,0,3.7v22c0,2,1.7,3.7,3.8,3.7H5V6.5l15,11.3L35,6.5v22.9h1.3c2.1,0,3.8-1.6,3.8-3.7v-22C40,1.6,38.3,0,36.3,0z"/>
+        </svg>
+      </div>
     </div>
     <script>
 
@@ -28,28 +53,34 @@
       window.open('https://www.dealabs.com');
       window.open("https://twitter.com");
       window.open('https://gmail.com');
-      window.open('https://ent.univ-rennes1.fr/');
-      window.close();
     }
 
+    $("#all").mouseenter(function() {
+      var that = $(this);
+      setTimeout(function () {
+        that.css('color','#2e3440');
+    }, 100);
+    })
+
+    $("#all").mouseleave(function() {
+      var that = $(this);
+      setTimeout(function () {
+        that.css('color','#6ba1b3');
+    }, 100);
+    })
 
     $(".tab").mouseenter(function() {
-      $(this).css('box-shadow','0px 0px 15px 5px ' + $(this).css('background-color'));
-      $(this).addClass('selected');
-      $(".tab").not('.selected').children().animate({
-        opacity: 0
-      }, 50);
-      $(this).children().animate({
-        opacity: 1
-      }, 300);
+      var that = $(this);
+      setTimeout(function () {
+        that.children().attr('fill','#2e3440');
+    }, 275);
     })
 
     $(".tab").mouseleave(function() {
-      $(this).css('box-shadow','none');
-      $(this).children().animate({
-        opacity: 0
-      }, 100);
-      $(this).removeClass('selected');
+      var that = $(this);
+      setTimeout(function () {
+        that.children().attr('fill',that.children().attr('bg'));
+      }, 275);
     })
     </script>
   </body>
