fixed link iframe

--- a/extension dial/index.html
+++ b/extension dial/index.html
@@ -143,13 +143,13 @@
 
 
     function opentabs() {
-      window.open('https://www.facebook.com');
       window.open('https://www.youtube.com/feed/subscriptions');
       window.open('https://www.reddit.com');
       window.open('https://www.dealabs.com');
       window.open("https://twitter.com");
       window.open('https://gmail.com');
-      window.open('https://ent.univ-rennes1.fr/','_top');
+      window.open('https://ent.univ-rennes1.fr/');
+      window.open('https://www.facebook.com','_top');
     }
 
     $("#all").mouseenter(function() {
