--- a/charts/index.html
+++ b/charts/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <meta name="theme-color" content="#f672a1">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Spotify Charts</title>
@@ -12,6 +12,8 @@
 
 <body>
   <div id="parallax">
+    <div id="sine"></div>
+    <div id="sine2"></div>
     <p id="scroll"><i class="fas fa-chevron-down"></i></p>
     <img src="logo.svg" id="logo" />
     <h1 id="title">Spotify</h1>
@@ -26,7 +28,7 @@
     <canvas id="songs_chart"></canvas>
     <div id="songs_container">
       <div id='close_songs'><i class="fas fa-chevron-down"></i></div>
-        <h1>Discover all the <p class="pink">songs</p> you listened to :</h1>
+      <h1>Discover all the <p class="pink">songs</p> you listened to :</h1>
     </div>
     <div id="top_artist_img_div">
       <a href="" target="_blank">
@@ -41,16 +43,44 @@
     </div>
   </div>
   <script type="text/javascript">
-    scrollPos = 0;
-      $(window).scroll(function(){
-        if ($(document).scrollTop() < 50){
-          $('#scroll').css('opacity','1');
+    function move_sine(sine){
+      random_height = window.scrollY + window.innerHeight/2 + (Math.random()*2-1)*200;
+      sine.css({transition: '0s', top: random_height}).delay(1).queue(function(next) {
+        sine.css({transition:'left 5s linear, top 5s linear'});
+        left = parseInt(sine.css('left').split('px')[0]);
+        tope = parseInt(sine.css('top').split('px')[0]);
+        random_angle = (Math.random()*2-1)*Math.PI/8;
+        if (left < 0){
+          target_left = window.innerWidth + 50;
+          sine.css('transform','rotate(' + random_angle + 'rad)');
+          sine.css('animation','leftScroll 1.0s linear infinite');
         }
         else{
-          $('#scroll').css('opacity','0');
-
+          target_left = -300;
+          sine.css('transform','rotate(' + (-random_angle) + 'rad)');
+          sine.css('animation','rightScroll 1.0s linear infinite');
         }
-        scrollPos = $(document).scrollTop();
+        delta_top = window.innerWidth*Math.tan(random_angle);
+        target_top = tope + delta_top;
+        sine.css('left',target_left);
+        sine.css('top',target_top);
+        next();
+        setTimeout(function() {
+          move_sine(sine);
+        }, 6000+Math.random()*1500);
+        return random_angle;
+      });
+    }
+
+    move_sine($('#sine'));
+    move_sine($('#sine2'));
+
+    $(window).scroll(function() {
+      if ($(document).scrollTop() < 50) {
+        $('#scroll').css('opacity', '1');
+      } else {
+        $('#scroll').css('opacity', '0');
+      }
     });
 
     artists = [];
@@ -60,6 +90,7 @@
     artists_names = [];
     artists_counts = [];
     genres = [];
+    maxCount = 50;
     $.ajaxSetup({
       async: false
     });
@@ -92,13 +123,16 @@
         name.innerHTML = song['name'];
         div.appendChild(name);
         var count = document.createElement('p');
-        count.innerHTML = secsToTime(parseInt(song['time']),true) + ' écoutés.';
+        count.innerHTML = secsToTime(parseInt(song['time']), true) + ' écoutés.';
         count.className = 'counter';
         div.appendChild(count);
         a.appendChild(div);
         songs_container.appendChild(a);
         songs_names.push(song['name']);
         songs_counts.push(song['time']);
+        if (songs_names.length > maxCount){
+          break
+        }
       }
       for (artist of artists) {
         var a = document.createElement('a');
@@ -125,12 +159,15 @@
         artists_container.appendChild(a);
         artists_names.push(artist['name']);
         artists_counts.push(artist['time']);
-        if (artist.hasOwnProperty('genres')){
+        if (artist.hasOwnProperty('genres')) {
           for (genre of artist['genres']) {
             if (!genres.includes(genre)) {
               genres.push(genre);
             }
           }
+        }
+        if (artists_names.length > maxCount){
+          break
         }
       }
     });
@@ -144,14 +181,13 @@
     async function countup() {
       i = 0;
       increment = 10;
-      while (i < total){
+      while (i < total) {
         $("#top").html('In total, you listened to <br/><br/><p class="pink time">' + secsToTime(i, true) + '</p> <br/><br/>by <p class="pink">' + artists_names.length +
           '</p> different artists, spanning <p class="pink">' + genres.length + '</p> different genres.');
         await sleep(50);
-        if (i+(increment*1.225) < total){
+        if (i + (increment * 1.225) < total) {
           increment *= 1.225
-        }
-        else if (increment > 1){
+        } else if (increment > 1) {
           increment /= 1.225
         }
         increment = parseInt(increment)
@@ -161,18 +197,23 @@
     countup();
 
     $('#top_song').html('You listened to <p class="pink">' + songs_names[0] + '</p> by ' + songs[0]['artist'] + ' for <p class="pink">' + secsToTime(songs_counts[0], true) + '</p>.');
-    $('#top_song_img').css('background-image','url(' + songs[0]['image'] + ')');
-    $('#top_song_img_div a').attr('href',songs[0]['url']);
+    $('#top_song_img').css('background-image', 'url(' + songs[0]['image'] + ')');
+    $('#top_song_img_div a').attr('href', songs[0]['url']);
 
     $('#top_artist').html('Your Top artist is <p class="pink">' + artists_names[0] + '</p> with <p class="pink">' + secsToTime(artists_counts[0], true) + '</p> listened.');
-    $('#top_artist_img').css('background-image','url(' + artists[0]['image'] + ')');
-    $('#top_artist_img_div a').attr('href',artists[0]['url']);
+    $('#top_artist_img').css('background-image', 'url(' + artists[0]['image'] + ')');
+    $('#top_artist_img_div a').attr('href', artists[0]['url']);
 
-    max = 25;
+    max = 50;
 
     if (artists_names.length > max) {
       artists_names = artists_names.slice(0, max);
       artists_counts = artists_counts.slice(0, max);
+    }
+
+    if (songs_names.length > max) {
+      songs_names = songs_names.slice(0, max);
+      songs_counts = songs_counts.slice(0, max);
     }
 
     new Chart("songs_chart", {
@@ -284,33 +325,31 @@
       });
     });
 
-    $(document).on('click', '#close_songs', function(evt){
-      if ($('.song').css('height') == '0px'){
-        $(this).css('transform','rotate(0deg)');
-        $('.song *').css('display','block');
-        $('.song').css('height','430px');
-        $('#top_artist_img_div').css('margin-top','200px');
-      }
-      else{
-        $(this).css('transform','rotate(180deg)');
-        $('.song *').css('display','none');
-        $('.song').css('height','0px');
-        $('#top_artist_img_div').css('margin-top','-200px');
-      }
-    });
-
-    $(document).on('click', '#close_artists', function(evt){
-      if ($('.artist').css('display') == 'none'){
-        $(this).css('transform','rotate(0deg)');
-        $('.artist').css('display','inline-block');
-      }
-      else{
-        $(this).css('transform','rotate(180deg)');
-        $('.artist').css('display','none');
+    $(document).on('click', '#close_songs', function(evt) {
+      if ($('.song').css('height') == '0px') {
+        $(this).css('transform', 'rotate(0deg)');
+        $('.song *').css('display', 'block');
+        $('.song').css('height', '430px');
+        $('#songs_container').css('height', 'auto');
+      } else {
+        $(this).css('transform', 'rotate(180deg)');
+        $('.song *').css('display', 'none');
+        $('.song').css('height', '0px');
+        $('#songs_container').css('height', '50px');
       }
     });
 
-    function secsToTime(seconds,string) {
+    $(document).on('click', '#close_artists', function(evt) {
+      if ($('.artist').css('display') == 'none') {
+        $(this).css('transform', 'rotate(0deg)');
+        $('.artist').css('display', 'inline-block');
+      } else {
+        $(this).css('transform', 'rotate(180deg)');
+        $('.artist').css('display', 'none');
+      }
+    });
+
+    function secsToTime(seconds, string) {
       days = 0;
       hours = 0;
       minutes = 0;
@@ -326,15 +365,15 @@
         minutes += 1;
         seconds -= 60
       }
-      if (!string){
+      if (!string) {
         if (days > 0) {
-          return [days,hours,minutes,seconds];
+          return [days, hours, minutes, seconds];
         }
         if (hours > 0) {
-          return [hours,minutes,seconds];
+          return [hours, minutes, seconds];
         }
         if (minutes > 0) {
-          return [minutes,seconds];
+          return [minutes, seconds];
         }
         return [seconds];
       }
@@ -355,18 +394,16 @@
     document.addEventListener("mousemove", parallax);
     const elem = document.querySelector("#parallax");
 
-    document.addEventListener('DOMContentLoaded',parallax);
+    document.addEventListener('DOMContentLoaded', parallax);
 
     function parallax(e) {
       let _w = window.innerWidth / 2;
       let _h = window.innerHeight / 2;
       let _mouseX = e.clientX;
       let _mouseY = e.clientY;
-      let _depth1 = `calc(0px + ${ - (_mouseY - _w) * 0.005}%) calc(0px + ${0 - (_mouseX - _h) * 0.005}%)`;
-      let _depth2 = `calc(-375px + ${ - (_mouseX - _w) * 0.0005}%) calc(-700px + ${ - (_mouseY - _h) * 0.0005}%)`;
-      let _depth3 = `${150 - (_mouseX - _w) * 0.005}% calc(0px +  ${0 - (_mouseY - _h) * 0.005}%)`;
-      let x = `${_depth3}, ${_depth2}, ${_depth1}`;
-      console.log(x);
+      let _depth2 = `calc(-375px + ${ - (_mouseX - _w) * 0.001}%) calc(-700px + ${ - (_mouseY - _h) * 0.00025} * 100px)`;
+      let _depth3 = `${150 - (_mouseX - _w) * 0.005}% calc(0px +  ${0 - (_mouseY - _h) * 0.005} * 100px)`;
+      let x = `${_depth3}, ${_depth2}`;
       elem.style.backgroundPosition = x;
     }
   </script>
