--- a/charts/index.html
+++ b/charts/index.html
@@ -2,7 +2,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="theme-color" content="#f672a1">
+  <meta name="theme-color" content="#016855">
+  <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Spotify Charts</title>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
