--- a/charts/index.html
+++ b/charts/index.html
@@ -168,39 +168,38 @@
           }
         }
         for (artist of artists) {
-          var a = document.createElement('a');
-          a.href = artist['url'];
-          $(a).attr('target', '_blank');
-          var div = document.createElement('div');
-          div.id = artist['name'];
-          div.className = 'artist';
-          image = document.createElement('div');
-          image.style.background = 'url(' + artist['image'] + ') no-repeat';
-          image.style.backgroundSize = '100%';
-          image.style.backgroundPosition = 'center';
-          image.className = 'cover';
-          div.appendChild(image);
-          var name = document.createElement('h1');
-          name.className = 'name';
-          name.innerHTML = artist['name'];
-          div.appendChild(name);
-          var count = document.createElement('p');
-          count.innerHTML = secsToTime(parseInt(artist['time']), true) + ' écoutés.';
-          count.className = 'counter';
-          div.appendChild(count);
-          a.appendChild(div);
-          artists_container.appendChild(a);
-          artists_names.push(artist['name']);
-          artists_counts.push(artist['time']);
+          if (artists_names.length < maxCount) {
+            var a = document.createElement('a');
+            a.href = artist['url'];
+            $(a).attr('target', '_blank');
+            var div = document.createElement('div');
+            div.id = artist['name'];
+            div.className = 'artist';
+            image = document.createElement('div');
+            image.style.background = 'url(' + artist['image'] + ') no-repeat';
+            image.style.backgroundSize = '100%';
+            image.style.backgroundPosition = 'center';
+            image.className = 'cover';
+            div.appendChild(image);
+            var name = document.createElement('h1');
+            name.className = 'name';
+            name.innerHTML = artist['name'];
+            div.appendChild(name);
+            var count = document.createElement('p');
+            count.innerHTML = secsToTime(parseInt(artist['time']), true) + ' écoutés.';
+            count.className = 'counter';
+            div.appendChild(count);
+            a.appendChild(div);
+            artists_container.appendChild(a);
+            artists_names.push(artist['name']);
+            artists_counts.push(artist['time']);
+          }
           if (artist.hasOwnProperty('genres')) {
             for (genre of artist['genres']) {
               if (!genres.includes(genre)) {
                 genres.push(genre);
               }
             }
-          }
-          if (artists_names.length > maxCount) {
-            break
           }
         }
         total = artists_counts.reduce((a, b) => a + b, 0);
@@ -300,7 +299,7 @@
       i = 0;
       increment = 10;
       while (i < total) {
-        $("#top").html('In total, you listened to <br/><br/><p class="pink time">' + secsToTime(i, true) + '</p> <br/><br/>by <p class="pink">' + artists_names.length +
+        $("#top").html('In total, you listened to <br/><br/><p class="pink time">' + secsToTime(i, true) + '</p> <br/><br/>by <p class="pink">' + artists.length +
           '</p> different artists, spanning <p class="pink">' + genres.length + '</p> different genres.');
         await sleep(50);
         if (i + (increment * 1.225) < total) {
