--- a/extension dial/index.html
+++ b/extension dial/index.html
@@ -11,11 +11,13 @@
   <body>
     <div onclick="opentabs()" id="all">OPEN ALL</div>
     <div id="tabs">
+      <!--
       <div class="tab" style="--bg-color:#3b5998" onclick="window.open('https://www.facebook.com','_top');">
         <svg width="40" height="40" fill="#3b5998" bg="#3b5998">
           <path d="M23.1,40V21.8h6.1l0.9-7.1h-7v-4.5c0-2.1,0.6-3.4,3.5-3.4l3.7,0V0.4c-0.6-0.1-2.9-0.3-5.5-0.3c-5.4,0-9.1,3.3-9.1,9.4v5.2H9.7v7.1h6.1V40H23.1z"/>
         </svg>
       </div>
+    -->
       <div class="tab" style="--bg-color:#cd201f" onclick="window.open('https://www.youtube.com/feed/subscriptions','_top');">
         <svg width="40" height="40" fill="#cd201f" bg="#cd201f">
           <path d="M39,4.4c-0.5-1.7-1.8-3-3.5-3.5C32.3,0,19.9,0,19.9,0S7.4,0,4.3,0.8c-1.7,0.5-3,1.8-3.5,3.5C0,7.5,0,13.9,0,13.9s0,6.5,0.8,9.6c0.5,1.7,1.8,3,3.5,3.5c3.1,0.9,15.6,0.9,15.6,0.9s12.5,0,15.6-0.8c1.7-0.5,3-1.8,3.5-3.5c0.8-3.1,0.8-9.6,0.8-9.6S39.8,7.5,39,4.4z M15.9,19.9V8l10.4,6L15.9,19.9z"/>
@@ -42,12 +44,14 @@
         	l4.7,3.5c0.4,0.3,1,0.3,1.4,0l6.3-4.8C31.5,13,32.6,14,32,14.9z"/>
         </svg>
       </div>
+      <!--
       <div class="tab" style="--bg-color:#03a5c1" onclick="window.open('https://dealabs.com','_top');">
         <svg width="40" height="40" fill="#03a5c1" bg="#03a5c1">
           <polygon points="0,31.9 4.1,40 34.4,40 38.2,31.9 36.3,29.2 27.7,33.2 4.6,25.6"/>
 	        <polygon points="15,0 15,10.3 8.2,20.3 27.6,26.8 33.1,24.2 23.6,10.3 23.6,0"/>
         </svg>
       </div>
+    -->
       <div class="tab" style="--bg-color:#00b2ff" onclick="window.open('https://twitter.com','_top');">
         <svg width="40" height="40" fill="#00b2ff" bg="#00b2ff">
           <path d="M39.8,3.8c-1.5,0.6-3.1,1.1-4.7,1.3c1.7-1,3-2.6,3.6-4.5c-1.6,0.9-3.3,1.6-5.2,2C32,1,29.9,0,27.6,0c-4.5,0-8.2,3.7-8.2,8.2c0,0.6,0.1,1.3,0.2,1.9C12.8,9.7,6.8,6.4,2.8,1.5C2.1,2.7,1.7,4.1,1.7,5.6c0,2.8,1.5,5.3,3.6,6.8c-1.3,0-2.6-0.4-3.7-1c0,0,0,0.1,0,0.1c0,4,2.8,7.3,6.5,8c-0.7,0.2-1.4,0.3-2.1,0.3c-0.5,0-1.1,0-1.5-0.1c1.1,3.2,4.1,5.6,7.6,5.7C9.3,27.5,5.8,28.8,2,28.8c-0.7,0-1.3,0-2-0.1c3.6,2.3,7.9,3.7,12.5,3.7c15,0,23.2-12.4,23.2-23.2c0-0.4,0-0.7,0-1.1		C37.3,6.9,38.7,5.5,39.8,3.8z"/>
@@ -145,11 +149,11 @@
     function opentabs() {
       window.open('https://www.youtube.com/feed/subscriptions');
       window.open('https://www.reddit.com');
-      window.open('https://www.dealabs.com');
+      //window.open('https://www.dealabs.com');
       window.open("https://twitter.com");
       window.open('https://gmail.com');
       window.open('https://ent.univ-rennes1.fr/');
-      window.open('https://www.facebook.com','_top');
+      //window.open('https://www.facebook.com','_top');
     }
 
     $("#all").mouseenter(function() {
