--- a/extension dial/index.html
+++ b/extension dial/index.html
@@ -153,7 +153,7 @@
       window.open("https://twitter.com");
       window.open('https://gmail.com');
       window.open('https://ent.univ-rennes1.fr/');
-      //window.open('https://www.facebook.com','_top');
+      window.open('https://www.messenger.com','_top');
     }
 
     $("#all").mouseenter(function() {
