--- a/index.html
+++ b/index.html
@@ -110,20 +110,22 @@
                 $(this).siblings(".blink").remove();
                 $(this).parent().append('<p><b>Dossiers existants :</b></p><br />');
                 $(this).parent().append('<p><pre>ATTESTATION    : Génère une attestation datant de 5min plus tôt.</pre></p>');
-                $(this).parent().append('<p><pre>BICLOO         : Affiche les disponibilités Bicloo grâce à l\'API JCDecaux.</pre></p>');
+                //$(this).parent().append('<p><pre>BICLOO         : Affiche les disponibilités Bicloo grâce à l\'API JCDecaux.</pre></p>');
                 $(this).parent().append('<p><pre>CORDINATES     : Test de coordonnées cylindriques/sphériques.</pre></p>');
+                $(this).parent().append('<p><pre>CHARTS         : Wrapped Spotify live</pre></p>');
+                $(this).parent().append('<p><pre>CRACKS         : Cracks de logiciels</pre></p>');
                 $(this).parent().append('<p><pre>EXTENSION DIAL : Onglet Dial personnel.</pre></p>');
                 $(this).parent().append('<p><pre>LABYRINTHE     : Générateur de labyrinthe + algo A* pour le résoudre.</pre></p>');
                 $(this).parent().append('<p><pre>NEURAL         : Réseau de neurones élémentaire pour la détection de chiffre.</pre></p>');
-                $(this).parent().append('<p><pre>PACMAN         : Pacman mjamais fini.</pre></p>');
+                //$(this).parent().append('<p><pre>PACMAN         : Pacman mjamais fini.</pre></p>');
                 $(this).parent().append('<p><pre>PHOTOSHOP      : Editeur d\'images en ligne.</pre></p>');
-                $(this).parent().append('<p><pre>RL-VIEWER      : Visualisateur de match RL en live.</pre></p>');
+                //$(this).parent().append('<p><pre>RL-VIEWER      : Visualisateur de match RL en live.</pre></p>');
                 $(this).parent().append('<p><pre>SHRUG          : ¯\\_(ツ)_/¯</pre></p>');
-                $(this).parent().append('<p><pre>SLAM           : Jeu télévisé recrée en js.</pre></p>');
-                $(this).parent().append('<p><pre>SLAM-APP       : Apk du jeu télévisé.</pre></p>');
-                $(this).parent().append('<p><pre>SLAM-MULTI     : Slam multijoueur.</pre></p>');
-                $(this).parent().append('<p><pre>SOUNDBOX       : Soundbox personnelle de sons recueillis.</pre></p>');
-                $(this).parent().append('<p><pre>SOUNDBOX-APK   : Apk de la Soundbox.</pre></p>');
+                //$(this).parent().append('<p><pre>SLAM           : Jeu télévisé recrée en js.</pre></p>');
+                //$(this).parent().append('<p><pre>SLAM-APP       : Apk du jeu télévisé.</pre></p>');
+                //$(this).parent().append('<p><pre>SLAM-MULTI     : Slam multijoueur.</pre></p>');
+                //$(this).parent().append('<p><pre>SOUNDBOX       : Soundbox personnelle de sons recueillis.</pre></p>');
+                //$(this).parent().append('<p><pre>SOUNDBOX-APK   : Apk de la Soundbox.</pre></p>');
                 $(this).parent().append('<p><pre>SPACE-VIEWER   : Simulateur de système solaire avec positions en temps réel.</pre></p>');
                 $(this).parent().append('<p class="command">www.gigiparmentier.com></p><input type="text" class="commandInput" autofocus autocomplete="off" style="width:0ch;" /><p class="blink">▃</p>');
                 $(this).prop('disabled', true);
